2013-12-04  Eric Botcazou  <ebotcazou@adacore.com>

	* gcc-interface/trans.c (Case_Statement_to_gnu): Do not push a binding
	level for each branch if this is a case expression in Ada 2012.
	(gnat_to_gnu) <case N_Expression_With_Actions>: Adjust comment.

2013-11-29  Eric Botcazou  <ebotcazou@adacore.com>

	PR ada/54040
	PR ada/59346
	* s-osinte-hpux.ads (timespec): Change type of tv_nsec field to time_t.
	* s-osinte-kfreebsd-gnu.ads (timespec): Likewise.
	* s-osinte-solaris-posix.ads (timespec): Likewise.

2013-11-23  Eric Botcazou  <ebotcazou@adacore.com>

	* gcc-interface/trans.c (Loop_Statement_to_gnu): Set TREE_SIDE_EFFECTS
	on the conditional expression directly.

2013-11-22  Andrew MacLeod  <amacleod@redhat.com>

	* gcc-interface/trans.c: Add required include files from gimple.h.

2013-11-22  David Malcolm  <dmalcolm@redhat.com>

	* gcc-interface/utils2.c (build_call_raise): Remove use of
	input_line macro.
	(build_call_raise_range): Likewise.
	(build_call_raise_column): Likewise.

2013-11-20  Kenneth Zadeck  <zadeck@naturalbridge.com>
	    Mike Stump  <mikestump@comcast.net>
	    Richard Sandiford  <rdsandiford@googlemail.com>

	* gcc-interface/cuintp.c (UI_From_gnu): Use tree_to_shwi.
	* gcc-interface/decl.c (gnat_to_gnu_entity): Use tree_to_uhwi.
	* gcc-interface/utils.c (make_packable_type): Likewise.

2013-11-18  Richard Sandiford  <rdsandiford@googlemail.com>

	* gcc-interface/cuintp.c (UI_From_gnu): Use tree_to_shwi rather than
	tree_low_cst.

2013-11-18  Richard Sandiford  <rdsandiford@googlemail.com>

	* gcc-interface/decl.c, gcc-interface/utils.c, gcc-interface/utils2.c:
	Replace tree_low_cst (..., 1) with tree_to_uhwi throughout.

2013-11-18  Richard Sandiford  <rdsandiford@googlemail.com>

	* gcc-interface/cuintp.c: Update comments to refer to
	tree_fits_shwi_p rather than host_integerp.
	* gcc-interface/decl.c (gnat_to_gnu_entity): Use tree_fits_uhwi_p
	rather than host_integerp.